# rustlechat

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: app_state.rs  main.rs
src/database/: init.rs  migrations.rs  mod.rs
src/handlers/: auth_handlers.rs  chat_handlers.rs  invitation_handlers.rs  mod.rs  websocker_handlers.rs
src/middleware/: auth_middleware.rs  mod.rs  ws_auth_middleware.rs
src/models/: chat.rs  invitation.rs  message.rs  mod.rs  user.rs
src/repositories/: auth_repository.rs  chat_repository.rs  invitation_repository.rs  mod.rs
src/repository/: auth_repository.rs
src/routes/: app_routes.rs
src/services/: auth_service.rs  chat_service.rs  invitation_service.rs  jwt_service.rs  mod.rs
src/utils/: password_validator.rs
src/websocket/: connection_manager.rs  handlers.rs  mod.rs  types.rs
static/: index.html
