[package]
name = "rustle_chat"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6", features = ["macros", "json", "ws", "headers"] }
tokio = { version = "1.0", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-chrono-0_4"] }
bcrypt = "0.15"
serde = { version = "1.0", features = ["derive"] }
jsonwebtoken = "8.3"
argon2 = "0.5"
uuid = { version = "1.3", features = ["serde", "v4"] }
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
tower-http = { version = "0.4", features = ["trace"] } # Adicione esta linha
validator = { version = "0.16", features = ["derive"] }
regex = "1.7"
tower = { version = "0.5.1", features = ["full"] }
hyper = "0.14"
tokio-tungstenite = "0.17"
tracing = "0.1"
tracing-subscriber = "0.3"

